Added JDBC connection properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+#
+# JDBC Properties
+#
 
+spring.datasource.url=jdbc:mysql://localhost:3306/employes_test
+spring.datasource.username=bankdata
+spring.datasource.password=bankdata
+
+#Logs JDBC statements (dev only - Takeoff this property when goes to PROD)
+logging.level.org.springframework.jdbc.core=TRACE
